--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "nx test"
   },
   "private": true,
+  "packageManager": "pnpm@10.14.0",
   "dependencies": {
     "@mantine/core": "^4.2.8",
     "@mantine/hooks": "^4.2.8",
