chore: remove ui lib and Storybook, move theme to app
- Move theme configuration from libs/ui to apps/wrthwhl/theme.ts
- Remove libs/ui library (only contained theme, unused components)
- Remove apps/ui-e2e (Storybook e2e tests)
- Remove .storybook configuration
- Remove Storybook and related dependencies from package.json

This simplifies the project structure and reduces maintenance burden
for future dependency upgrades.

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,8 +15,7 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@wrthwhl/content": ["libs/content/.contentlayer/generated"],
-      "@wrthwhl/ui": ["libs/ui/src/index.ts"]
+      "@wrthwhl/content": ["libs/content/.contentlayer/generated"]
     }
   },
   "exclude": ["node_modules", "tmp"]
