--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@mantine/emotion": "7.17.4",
     "@mantine/hooks": "7.17.4",
     "@radix-ui/colors": "^0.1.8",
-    "@tabler/icons": "^1.78.0",
+    "@tabler/icons-react": "^3.36.1",
     "contentlayer": "^0.3.4",
     "core-js": "^3.6.5",
     "next": "14.2.35",
@@ -31,9 +31,8 @@
     "tslib": "^2.3.0"
   },
   "devDependencies": {
-    "@babel/core": "7.12.13",
-    "@babel/preset-typescript": "7.12.13",
-    "@nrwl/cli": "14.8.9",
+    "@babel/core": "7.28.6",
+    "@babel/preset-typescript": "7.28.5",
     "@nrwl/cypress": "19.8.0",
     "@nrwl/eslint-plugin-nx": "19.8.0",
     "@nrwl/jest": "19.8.0",
@@ -42,7 +41,7 @@
     "@nrwl/react": "19.8.0",
     "@nrwl/web": "19.8.0",
     "@nrwl/workspace": "19.8.0",
-    "@svgr/webpack": "^5.4.0",
+    "@svgr/webpack": "^8.1.0",
     "@testing-library/react": "15.0.6",
     "@types/jest": "29.5.14",
     "@types/node": "18.16.9",
