--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,7 +15,7 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@wrthwhl/content": ["libs/content/.contentlayer/generated"]
+      "@wrthwhl/content": [".contentlayer/generated"]
     }
   },
   "exclude": ["node_modules", "tmp"]
