--- a/package.json
+++ b/package.json
@@ -15,58 +15,57 @@
     "@emotion/serialize": "^1.3.3",
     "@emotion/server": "11.11.0",
     "@emotion/utils": "^1.4.2",
-    "@mantine/core": "7.17.4",
-    "@mantine/emotion": "7.17.4",
-    "@mantine/hooks": "7.17.4",
-    "@radix-ui/colors": "^0.1.8",
+    "@mantine/core": "8.3.12",
+    "@mantine/emotion": "8.3.12",
+    "@mantine/hooks": "8.3.12",
+    "@radix-ui/colors": "^3.0.0",
     "@tabler/icons-react": "^3.36.1",
-    "contentlayer": "^0.3.4",
-    "core-js": "^3.6.5",
-    "next": "14.2.35",
-    "next-contentlayer": "^0.3.4",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "contentlayer2": "^0.5.8",
+    "core-js": "^3.47.0",
+    "next": "16.1.2",
+    "next-contentlayer2": "^0.5.8",
+    "react": "19.2.3",
+    "react-dom": "19.2.3",
     "react-obfuscate": "^3.6.8",
-    "regenerator-runtime": "0.13.7",
-    "tslib": "^2.3.0"
+    "regenerator-runtime": "0.14.1",
+    "tslib": "^2.8.1"
   },
   "devDependencies": {
     "@babel/core": "7.28.6",
     "@babel/preset-typescript": "7.28.5",
-    "@nrwl/cypress": "19.8.0",
-    "@nrwl/eslint-plugin-nx": "19.8.0",
-    "@nrwl/jest": "19.8.0",
-    "@nrwl/linter": "19.8.0",
-    "@nrwl/next": "19.8.0",
-    "@nrwl/react": "19.8.0",
-    "@nrwl/web": "19.8.0",
-    "@nrwl/workspace": "19.8.0",
+    "@eslint/eslintrc": "^3.3.3",
+    "@eslint/js": "^9.39.2",
+    "@nx/eslint": "22.3.3",
+    "@nx/eslint-plugin": "22.3.3",
+    "@nx/jest": "22.3.3",
+    "@nx/next": "22.3.3",
+    "@nx/react": "22.3.3",
+    "@nx/web": "22.3.3",
+    "@nx/workspace": "22.3.3",
     "@svgr/webpack": "^8.1.0",
-    "@testing-library/react": "15.0.6",
-    "@types/jest": "29.5.14",
-    "@types/node": "18.16.9",
-    "@types/react": "18.3.1",
-    "@types/react-dom": "18.3.0",
-    "@typescript-eslint/eslint-plugin": "7.18.0",
-    "@typescript-eslint/parser": "7.18.0",
-    "babel-jest": "29.7.0",
-    "babel-loader": "8.1.0",
-    "cypress": "^9.1.0",
-    "eslint": "8.57.1",
-    "eslint-config-next": "14.2.3",
-    "eslint-config-prettier": "9.1.2",
-    "eslint-plugin-cypress": "2.15.2",
-    "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-jsx-a11y": "6.6.1",
-    "eslint-plugin-react": "7.31.8",
-    "eslint-plugin-react-hooks": "4.6.0",
-    "jest": "29.7.0",
-    "nx": "19.8.0",
-    "prettier": "2.8.8",
-    "react-test-renderer": "18.2.0",
-    "ts-jest": "29.1.5",
-    "ts-node": "10.9.1",
-    "typescript": "5.7.3",
-    "url-loader": "^3.0.0"
+    "@testing-library/react": "16.3.1",
+    "@types/jest": "30.0.0",
+    "@types/node": "25.0.9",
+    "@types/react": "19.2.8",
+    "@types/react-dom": "19.2.3",
+    "@typescript-eslint/eslint-plugin": "8.53.0",
+    "@typescript-eslint/parser": "8.53.0",
+    "babel-jest": "30.2.0",
+    "babel-loader": "10.0.0",
+    "eslint": "9.39.2",
+    "eslint-config-next": "16.1.2",
+    "eslint-config-prettier": "10.1.8",
+    "eslint-plugin-import": "2.32.0",
+    "eslint-plugin-jsx-a11y": "6.10.2",
+    "eslint-plugin-react": "7.37.5",
+    "eslint-plugin-react-hooks": "7.0.1",
+    "jest": "30.2.0",
+    "jest-environment-jsdom": "^30.2.0",
+    "nx": "22.3.3",
+    "prettier": "3.8.0",
+    "ts-jest": "29.4.6",
+    "ts-node": "10.9.2",
+    "typescript": "5.9.3",
+    "url-loader": "^4.1.1"
   }
 }
