--- a/package.json
+++ b/package.json
@@ -10,24 +10,19 @@
   "private": true,
   "packageManager": "pnpm@10.14.0",
   "dependencies": {
-    "@emotion/cache": "^11.14.0",
-    "@emotion/react": "11.14.0",
-    "@emotion/serialize": "^1.3.3",
-    "@emotion/server": "11.11.0",
-    "@emotion/utils": "^1.4.2",
-    "@mantine/core": "8.3.12",
-    "@mantine/emotion": "8.3.12",
-    "@mantine/hooks": "8.3.12",
     "@radix-ui/colors": "^3.0.0",
-    "@tabler/icons-react": "^3.36.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "contentlayer2": "^0.5.8",
     "core-js": "^3.47.0",
+    "lucide-react": "^0.562.0",
     "next": "16.1.2",
     "next-contentlayer2": "^0.5.8",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-obfuscate": "^3.6.8",
     "regenerator-runtime": "0.14.1",
+    "tailwind-merge": "^3.4.0",
     "tslib": "^2.8.1"
   },
   "devDependencies": {
@@ -43,6 +38,7 @@
     "@nx/web": "22.3.3",
     "@nx/workspace": "22.3.3",
     "@svgr/webpack": "^8.1.0",
+    "@tailwindcss/postcss": "^4.1.18",
     "@testing-library/react": "16.3.1",
     "@types/jest": "30.0.0",
     "@types/node": "25.0.9",
@@ -50,6 +46,7 @@
     "@types/react-dom": "19.2.3",
     "@typescript-eslint/eslint-plugin": "8.53.0",
     "@typescript-eslint/parser": "8.53.0",
+    "autoprefixer": "^10.4.23",
     "babel-jest": "30.2.0",
     "babel-loader": "10.0.0",
     "eslint": "9.39.2",
@@ -62,7 +59,9 @@
     "jest": "30.2.0",
     "jest-environment-jsdom": "^30.2.0",
     "nx": "22.3.3",
+    "postcss": "^8.5.6",
     "prettier": "3.8.0",
+    "tailwindcss": "^4.1.18",
     "ts-jest": "29.4.6",
     "ts-node": "10.9.2",
     "typescript": "5.9.3",
