feat: add WebAuthn/Passkey authentication for analytics (#5)
* feat: add WebAuthn/Passkey authentication for analytics

Phase 2 implementation:
- Add @simplewebauthn/server for WebAuthn support
- Implement registration flow (/api/auth/register/options, /verify)
- Implement login flow (/api/auth/login/options, /verify)
- Add session management (30-day cookie-based sessions)
- Add requireAuth middleware for protected routes
- Support one-time SETUP_TOKEN for initial registration
- Update CORS to support credentials

Remaining: Set SETUP_TOKEN secret in Cloudflare, test end-to-end

* refactor: simplify auth to solo mode, remove SETUP_TOKEN requirement

--- a/apps/analytics/package.json
+++ b/apps/analytics/package.json
@@ -8,6 +8,7 @@
     "cf-typegen": "wrangler types"
   },
   "dependencies": {
+    "@simplewebauthn/server": "^13.2.2",
     "hono": "^4.7.0"
   },
   "devDependencies": {
