feat: configure console for Cloudflare Pages deployment
- Add static export to next.config.js
- Add deploy target to project.json

--- a/apps/console/project.json
+++ b/apps/console/project.json
@@ -43,6 +43,16 @@
           "dev": false
         }
       }
+    },
+    "deploy": {
+      "executor": "nx:run-commands",
+      "dependsOn": ["build"],
+      "options": {
+        "commands": [
+          "wrangler pages deploy dist/apps/console/.next --project-name=wrthwhl-console"
+        ],
+        "cwd": "."
+      }
     }
   }
 }
